[tool.poetry]
name = "hyper-v-exporter"
version = "0.1.0"
description = ""
authors = ["cloudyd3 <hedhero@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
prometheus-client = "^0.14.1"
pywin32 = "^304"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hyper-v-exporter = 'hyper_v_exporter.app:main'
